--- a/01-getting-starter/src/pages/index.module.css
+++ b/01-getting-starter/src/pages/index.module.css
@@ -4,15 +4,20 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 5rem 2rem;
   text-align: center;
   position: relative;
   overflow: hidden;
+  min-height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 3rem 1.5rem;
+    min-height: 400px;
   }
 }
 
@@ -20,4 +25,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .buttons {
+    flex-direction: column;
+  }
 }
